--- a/WebApp/styles/styles.css
+++ b/WebApp/styles/styles.css
@@ -130,16 +130,20 @@ body {
   font-family: "Lato", sans-serif;
 }
 
-.sidenav {
+#nav{
+  opacity: 0;
+  transition: opacity .25s;
+}
+
+.sidenav{
   height: 100%;
-  width: 0;
+  width: 250px;
   position: fixed;
   z-index: 1;
   top:0;
   left: 0;
   background-color: #111;
   overflow-x: hidden;
-  transition: 0.5s;
   padding-top: 60px;
 }
 
