--- a/WebApp/styles/login.css
+++ b/WebApp/styles/login.css
@@ -85,3 +85,43 @@
     font-size: 12px;
     height: 13px;
 }
+.suggestion {
+  color: #12832b;
+  font-size: 12px;
+  height: 13px;
+}
+
+
+/* ///////// */
+/* #{
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+} */
+.loginTable{
+  min-height: 400px;
+}
+
+td,
+th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #ddd;
+}
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #5482c6;
+  color: white;
+}
+
+
